Frontend/src/features/TextEditor/components/tiptap-templates/simple/simple-editor.scss
@import url("https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap");

body {
  --tt-toolbar-height: 44px;
  --tt-theme-text: var(--tt-gray-light-900);

  .dark & {
    --tt-theme-text: var(--tt-gray-dark-900);
    color: var(--tt-theme-text);
  }
}

// Force toolbar buttons to be visible in dark mode
.dark {
  button {
    color: var(--tt-gray-dark-900);

    svg {
      color: currentColor;
    }
  }

  // Specific fix for disabled buttons
  button:disabled {
    color: var(--tt-gray-dark-500);
  }
}

body {
  font-family: "Inter", sans-serif;
  color: var(--tt-theme-text);
  font-optical-sizing: auto;
  font-weight: 400;
  font-style: normal;
  padding: 0;
}

html,
body,
#root,
#app {
  height: 100%;
  background-color: var(--tt-bg-color);
}

::-webkit-scrollbar {
  width: 0.25rem;
}

* {
  scrollbar-width: thin;
  scrollbar-color: var(--tt-scrollbar-color) transparent;
}

::-webkit-scrollbar-thumb {
  background-color: var(--tt-scrollbar-color);
  border-radius: 9999px;
}

::-webkit-scrollbar-track {
  background: transparent;
}

.tiptap.ProseMirror {
  font-family: "DM Sans", sans-serif;
}

.simple-editor-wrapper {
  display: flex;
  flex-direction: column;
}

.simple-editor-content {
  max-width: 648px;
  width: 100%;
  margin: 0 auto;
  height: 100%;
  display: flex;
  flex-direction: column;
  flex: 1;
}

.simple-editor-content .tiptap.ProseMirror.simple-editor {
  flex: 1;
  padding: 2rem 2rem 20vh;
}

@media screen and (max-width: 480px) {
  .simple-editor-content .tiptap.ProseMirror.simple-editor {
    padding: 1rem 1.5rem 30vh;
  }
}

